<resources>
    <string name="app_name">RunKeeper</string>
    <string name="action_settings">Settings</string>
    <string name="forecast_date">Date</string>
    <string name="forecast_description">Description</string>
    <string name="forecast_max_temperature">Max. temperature</string>
    <string name="forecast_min_temperature">Min. temperature</string>
    <string name="forecast_icon">Icon</string>
    <string name="forecast_enter_city_name">Enter city name</string>
    <string name="forecast_settings">Forecast</string>
    <string name="forecast_duration">Forecast duration</string>
    <string name="cache">Cache</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="press_button_to_close_popup">Press button to close popup</string>
    <string name="tab_forecast">Forecast</string>
    <string name="profile_date_of_birth">Date of birth</string>
    <string name="tab_profile">Profile</string>
    <string name="profile_personal_info">Personal info</string>
    <string name="profile_email_address">Email address</string>
    <string name="profile_first_name">First name</string>
    <string name="profile_save">Save</string>
    <string name="profile_is_subscriber">Is subscriber</string>
    <string name="tab_tracking">Tracking</string>
    <string name="tracking_duration">Duration</string>
    <string name="tracking_speed">Speed</string>
    <string name="tracking_pace">Pace</string>
    <string name="forecast_details_start">Start</string>
    <string name="photos_take_photo">Take photo</string>
    <string name="photos_image">Image</string>
    <string name="tab_photos">Photos</string>
</resources>