<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="user" type="pl.training.runkeeper.profile.models.User" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding">

        <ImageView
            android:id="@+id/profile_photo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:padding="@dimen/padding"
            android:src="@drawable/background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/profile_first_section"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_personal_info"
            android:textStyle="bold"
            android:textSize="@dimen/header"
            app:layout_constraintTop_toBottomOf="@id/profile_photo"
            app:layout_constraintStart_toStartOf="parent" />


        <EditText
            android:id="@+id/profile_first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/profile_first_name"
            android:text="@{user.firstName}"
            app:layout_constraintTop_toBottomOf="@id/profile_first_section"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/profile_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/profile_email_address"
            app:layout_constraintTop_toBottomOf="@id/profile_first_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/profile_birth_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/profile_date_of_birth"
            app:layout_constraintTop_toBottomOf="@id/profile_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <CheckBox
            android:id="@+id/profile_is_subscriber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_is_subscriber"
            android:checked="@={user.subscriber}"
            app:layout_constraintTop_toBottomOf="@id/profile_birth_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:id="@+id/profile_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_save"
            app:layout_constraintTop_toBottomOf="@id/profile_is_subscriber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>