<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/tracking_stats"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/stats"
        android:orientation="horizontal"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tracking_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/padding"
            android:text="@string/tracking_duration"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tracking_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/padding"
            android:text="@string/tracking_speed"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tracking_pace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/padding"
            android:text="@string/tracking_pace"
            android:textAlignment="center" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/tracking_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tracking_stats" />

</androidx.constraintlayout.widget.ConstraintLayout>